nobody-knows/src/assets/styles/index.scss
body {
  margin: 0;
  padding: 0;
  font-family: 'Helvetica', -apple-system, BlinkMacSystemFont, 'Segoe UI',
    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
    'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.landingpage--container {
  margin-top: 0;

  height: 100vh;

  background-image: url('https://zayland-assets.s3.amazonaws.com/images/background.png');
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}

.homepage--container {
  margin-top: 0;
  min-height: 100vh;
  height: 100%;

  background-image: url('https://zayland-assets.s3.amazonaws.com/images/blank_background.png');
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}

.rotate {
  transform-origin: center center;
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
}

div.menu-button {
  display: block;
  transition: all 0.4s ease-in-out;
  line-height: 1.4;
}

